<resources>
    <string name="app_name">WalkMe</string>
    <string name="login_input">Вход</string>
    <string name="password">Введите пароль</string>
    <string name="login">Номер телефона</string>
    <string name="no_account">Нет аккаунта?Создать аккаунт!</string>
    <string name="register_new_account">РЕГИСТРАЦИЯ НОВОГО АККАУНТА</string>
    <string name="name_register">Введите своё имя</string>
    <string name="surname">Введите фамилию</string>
    <string name="reapit_password">Повторите параль</string>
    <string name="choose_your_gender">Укажите свой пол</string>
    <string name="specify_the_age">Укажите свой возраст</string>
    <string name="choose_the_area_in_which_you_live">Укажите в каком районе вы живёте</string>
    <string name="to_reset">В случае если вы забудете пароль укажите секретный вопрос</string>
    <string name="answer_question">Укажите ответ на вопрос</string>
    <string name="next">Далее</string>
    <string name="icon_home">Профиль</string>
    <string name="icon_rating">Рейтинг</string>
    <string name="icon_search">Поиск</string>
    <string name="icon_notification">Уведомление</string>
    <string name="home_name">Светлана</string>
    <string name="home_surname_user">Атаманова</string>
    <string name="photo">Фото</string>
    <string name="message">Сообщение</string>
    <string name="settings">Настройки</string>
    <string name="interest">Интересы</string>
    <string name="my_self">О себе</string>
    <string name="myself_information">Скромная девушка ищу парня для серьезных отношений, главное на мое мнение в парне это ум, мужество, BMW.Я считатаю что я самая умная красивая и ахуеная гучи дамма на планете</string>
    <string name="notification_name">Уведомление</string>
    <string name="add">Добавить</string>
    <string name="year">23 года</string>
    <string name="code">Код</string>
    <string name="number">+7</string>
    <string name="registry">Зарегестрироваться</string>
    <string name="phone_number">Номер телефона</string>
    <string name="interest_enter">Введите интерес</string>
    <string name="example">Например:</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="edit_you_self">Введите информацию</string>
    <string name="online">Онлайн</string>
    <string name="send_messege">Введите сообщение...</string>
    <string name="messege_text">Текс для чата</string>

    <string-array name="areya">
        <item>Армянск</item>
        <item>Алушта</item>
        <item>Бахчисарайский район</item>
        <item>Белогорский район</item>
        <item>Джанкойский район</item>
        <item>Евпатория</item>
        <item>Керчь</item>
        <item>Красноперекопский район</item>
        <item>Кировский район</item>
        <item>Красногвардейский район</item>
        <item>Ленинский район</item>
        <item>Нижнегорский район</item>
        <item>Первомайский район</item>
        <item>Раздольненский район</item>
        <item>Сакский район</item>
        <item>Симферопольский район</item>
        <item>Советский район</item>
        <item>	Черноморский район</item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
</resources>
