<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">
            <TextView
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/register_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_name"
                style="@style/InputLayoutStyle">
                <EditText
                    style="@style/EditInputLayout"
                    android:inputType="textPersonName"
                    android:hint="@string/name_register"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_surname"
                style="@style/InputLayoutStyle">
                <EditText
                    style="@style/EditInputLayout"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/InputLayoutStyle"
                android:id="@+id/edit_text_login">
                <EditText
                   style="@style/EditInputLayout"
                    android:inputType="textPersonName"
                    android:hint="@string/login"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/InputLayoutStyle"
                android:id="@+id/edit_text_password">
                <EditText
                   style="@style/EditInputLayout"
                    android:inputType="textVisiblePassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/InputLayoutStyle"
                android:id="@+id/edit_text_reapit_password">
                <EditText
                   style="@style/EditInputLayout"
                    android:inputType="textVisiblePassword"
                    android:hint="@string/reapit_password"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_your_gender"/>
            <io.ghyeok.stickyswitch.widget.StickySwitch
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="60dp"
                app:ss_iconPadding="14dp"
                app:ss_iconSize="18dp"
                app:ss_leftIcon="@mipmap/ic_male"
                app:ss_leftText="Парень"
                app:ss_rightIcon="@mipmap/ic_female"
                app:ss_rightText="Девушка"
                app:ss_selectedTextSize="14sp"
                app:ss_sliderBackgroundColor="@color/white"
                app:ss_switchColor="@color/black"
                app:ss_textColor="@color/black"
                app:ss_textSize="12sp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_the_area_in_which_you_live"/>
            <Spinner
                android:id="@+id/spinner_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specify_the_age"/>
                <Spinner
                    android:id="@+id/spinner_age"
                    android:layout_width="match_parent"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_reset"/>
            <Spinner
                android:id="@+id/question_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_text_answer"
                    style="@style/InputLayoutStyle">
                    <EditText
                        android:inputType="textPersonName"
                        style="@style/EditInputLayout"
                        android:hint="@string/answer_question"/>

                </android.support.design.widget.TextInputLayout>



            <android.support.v7.widget.AppCompatButton
                android:layout_marginTop="8dp"
                android:id="@+id/next_button"
                android:background="@drawable/button_login_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/next"/>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>