<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/logo_image"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_logo_image"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:text="@string/number"
                android:hint="@string/login"
                android:shadowColor="@color/colorBlack"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:layout_marginTop="6dp"
            android:id="@+id/login_button"
            android:background="@drawable/button_login_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/login_input"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/colorlink"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:id="@+id/create_account"/>
    </LinearLayout>

</RelativeLayout>