<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="6dp">
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/add_photo"
           style="@style/HomeNavigationImage"
            android:src="@mipmap/ic_add_photo"/>
        <TextView
            android:layout_below="@id/add_photo"
            android:text="@string/photo"
            style="@style/HomeNavigation"
            android:textColor="@color/black"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/message"
            style="@style/HomeNavigationImage"
            android:src="@mipmap/ic_message" />
        <TextView
            android:layout_below="@id/message"
            style="@style/HomeNavigation"
            android:text="@string/message"
            android:textColor="@color/black"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/settings"
            style="@style/HomeNavigationImage"
            android:src="@mipmap/ic_settings"/>
        <TextView
            android:layout_below="@id/settings"
            style="@style/HomeNavigation"
            android:textColor="@color/black"
            android:text="@string/settings"/>
    </RelativeLayout>

</LinearLayout>