<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/alert_dialog_background"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_marginTop="8dp"
        android:id="@+id/example_tag"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/example"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />


        <me.gujun.android.taggroup.TagGroup
            app:atg_horizontalPadding="10dp"
            app:atg_textColor="@color/colorWhite"
            app:atg_borderColor="@color/colorBlue"
            app:atg_textSize="15sp"
            app:atg_backgroundColor="@color/colorBlue"
            android:padding="10dp"
            android:text="Добавить"
            android:id="@+id/example_tag_group"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <me.gujun.android.taggroup.TagGroup
        android:background="@drawable/user_shape_background"
        android:layout_below="@id/example_tag"
        android:id="@+id/dialog_tag"
        android:layout_margin="16dp"
        style="@style/TextTagGroup"
        app:atg_textColor="@color/colorWhite"
        app:atg_backgroundColor="@color/colorBlue"
        app:atg_borderColor="@color/colorBlue"
        app:atg_verticalPadding="3dp"
        app:atg_horizontalPadding="10dp">
    </me.gujun.android.taggroup.TagGroup>


    <LinearLayout
        android:id="@+id/dtg"
        android:weightSum="100"
        android:layout_below="@id/dialog_tag"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:layout_marginLeft="16dp"
            android:id="@+id/edit_tag"
            android:layout_width="0dp"
            android:layout_weight="60"
            android:layout_height="match_parent"
            android:hint="@string/interest_enter"
            android:inputType="textPersonName"
            android:backgroundTint="@color/colorWhite"
            android:shadowColor="@color/colorBlack" />


    <Button
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:text="Добавить"
        android:id="@+id/add_tag"
        android:background="@drawable/confirm_button"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:layout_weight="40"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/dtg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cancel"
            android:textSize="18sp"
            android:textColor="@color/colorRed"
            android:text="@string/cancel"
            android:gravity="center"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/save"
            android:textColor="@color/colorBlue"
            android:textSize="18sp"
            android:text="@string/save"
            android:gravity="center"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>



</RelativeLayout>