<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milkgrey">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        android:weightSum="100">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="55">
            <ImageView
                android:id="@+id/home_image_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"/>
            <ProgressBar
                android:id="@+id/home_progress_bar"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <LinearLayout
                android:layout_alignBottom="@id/home_image_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#40000000">
                <TextView
                    android:id="@+id/home_name_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_name"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45">
            <LinearLayout
                android:id="@+id/rating_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">
            </LinearLayout>
            <LinearLayout
                android:layout_below="@id/rating_layout"
                android:id="@+id/home_linear_layout"
                style="@style/LinearStyleHome">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/interest"
                        style="@style/TextHomeTitle"/>
                    <ImageView
                        android:layout_alignParentRight="true"
                        android:id="@+id/zoom_interest"
                        android:layout_marginRight="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search"/>
                </RelativeLayout>
                <me.gujun.android.taggroup.TagGroup
                    android:id="@+id/home_tag_layout"
                    style="@style/TextTagGroup"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_below="@id/home_linear_layout"
                style="@style/LinearStyleHome">
                <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/TextHomeTitle"
                    android:text="@string/my_self" />
                <ImageView
                    android:layout_alignParentRight="true"
                    android:id="@+id/zoom_my_self"
                    android:layout_marginRight="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search"/>
            </RelativeLayout>
                <TextView
                    android:id="@+id/user_myself_information"
                    style="@style/TextMyself"
                    android:text="@string/myself_information" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <include layout="@layout/bottom_navigation_view_ex"/>
</RelativeLayout>