<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorMilkgrey"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorMilkgrey"
        android:src="@mipmap/ic_invite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorMilkgrey"
        android:src="@mipmap/ic_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#4Dffffff"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></android.support.v7.widget.RecyclerView>


    <TextView
        android:id="@+id/home_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_name"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="ПГТ. Советский "
        android:textColor="@color/colorTitle"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/home_name_user"
        app:layout_constraintTop_toBottomOf="@+id/home_name_user" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/year"
        android:textColor="@color/colorTitle"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/home_name_user" />

    <me.gujun.android.taggroup.TagGroup
        android:id="@+id/home_tag_layout"
        style="@style/TextTagGroup"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/user_shape_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/title_background"
        android:gravity="center"
        android:text="@string/interest"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/home_tag_layout"
        app:layout_constraintEnd_toStartOf="@+id/home_tag_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home_tag_layout"
        app:layout_constraintTop_toTopOf="@+id/home_tag_layout"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/edit_myself"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center|top"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/user_shape_background"
        android:lines="5"
        android:maxLines="8"
        android:paddingLeft="8dp"
        android:paddingTop="20dp"
        android:text="Введите информацию"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_tag_layout" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/title_background"
        android:gravity="center"
        android:text="@string/my_self"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_myself"
        app:layout_constraintEnd_toStartOf="@+id/edit_myself"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_myself"
        app:layout_constraintTop_toTopOf="@+id/edit_myself"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/bottom_navigation_view_ex"

            />
    </FrameLayout>


</android.support.constraint.ConstraintLayout>